# brushnix

./: flake.nix
crates/brush-train/: Cargo.toml
crates/brush-train/src/: train.rs
crates/lpips/: Cargo.toml
crates/lpips/src/: lib.rs
